--- a/firebase.json
+++ b/firebase.json
@@ -7,7 +7,10 @@
       "**/node_modules/**"
     ],
     "frameworksBackend": {
-      "region": "us-central1"
+      "region": "us-central1",
+      "maxInstances": 10,
+      "memory": "512MiB",
+      "cpu": 1
     }
   }
 }
