--- a/src/lib/firebase.json
+++ b/src/lib/firebase.json
@@ -9,9 +9,9 @@
     ],
     "frameworksBackend": {
       "region": "us-central1",
-      "maxInstances": 2,
+      "maxInstances": 10 ,
       "memory": "512MiB",
-      "cpu": 1
+      "cpu": 1 ,
     }
   }
 }
